# ros2-mecanum-bot

mecanumbot_bringup/: package.xml
mecanumbot_controller/: CMakeLists.txt  package.xml
mecanumbot_controller/include/mecanumbot_controller/: mecanumbot_drive_controller.hpp  mecanumbot_plate.hpp
mecanumbot_controller/src/: mecanumbot_drive_controller.cpp  mecanumbot_plate.cpp
mecanumbot_description/config/: robot_controller_config.yaml
mecanumbot_hardware/: CMakeLists.txt
mecanumbot_hardware/include/mecanumbot_hardware/: mecanumbot_hardware.hpp  nanolib_helper.hpp
mecanumbot_hardware/src/: mecanumbot_hardware.cpp  nanolib_helper.cpp
